--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.3.2",
+    "react-native-paper": "^4.8.1",
     "react-native-trimmer": "^1.1.1",
     "react-native-video": "^5.1.1",
     "react-native-video-processing": "^2.0.0",
