--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^5.12.5",
     "expo": "~40.0.0",
     "expo-av": "~8.7.0",
     "expo-image-picker": "~9.2.0",
+    "expo-media-library": "^12.0.2",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "ios": "0.0.1",
